fix: [main] Fix page and letter spacing

--- a/src/components/projects/templates/Page/Page.scss
+++ b/src/components/projects/templates/Page/Page.scss
@@ -2,6 +2,7 @@
 
 .rf-page {
   max-width: 1368px;
+  height: 100%;
   padding: 0 40px 40px;
   background-color: var(--base-150);
 }
